# krishnaik-text2sqlrag-project

./: .env.example  Dockerfile.lambda  README.md  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: vanna_ai_text_to_sql_complete.ipynb
